# DiscordBlackCarBot

./: .gitignore  Command.py  CoolcatDB.db  CreateTable.py  DCBOT.py  README.md  pyproject.toml  schema.drawio  x.py
archived/: main.py
backend/: Command.py  Connecter.py  CreateTable.py  backendEntryPoint.py  car_manager.py  car_model.py  car_passenger.py  create_table.py  testmain.py
bot/: bot.py  common.py
bot/cogs/: gui.py  main.py
bot/model/: bot_model.py  car_model.py
bot/views/: bot_modal.py  bot_views.py
database/: CoolcatDB.db
mainApp/: main.py
tool/: initEnv.bat  runApp.bat
tool_mac/: initEnv  runApp
