[tool.poetry]
name = "discordblackcarbot"
version = "0.1.0"
description = ""
authors = ["Whiterzi <catwhiter@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
